--- a/WindowsInputDevice-Interpreter/MainWindow.xaml
+++ b/WindowsInputDevice-Interpreter/MainWindow.xaml
@@ -5,9 +5,41 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WindowsInputDevice_Interpreter"
         mc:Ignorable="d"
-        Title="MainWindow" Height="150" Width="200" Background="#000000" >
+        Title="MainWindow" Height="400" Width="600" Background="#000000" >
     <Grid>
-        <ComboBox x:Name="comboPorts" HorizontalAlignment="Center" VerticalAlignment="Top" Width="120" Grid.Row="1" Margin="0,10,0,0"/>
-        <Button x:Name="btn1" Content="Connect" HorizontalAlignment="Center" VerticalAlignment="Bottom" BorderBrush="Transparent" Width="100" Margin="0,0,0,10" Background="#ffffff" Click="connect" Height="50"/>
+        <Grid HorizontalAlignment="Left" VerticalAlignment="Center">
+            <Grid HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0,30,0,0" Width="300">
+                <Label x:Name="labelPorts" HorizontalAlignment="Left" VerticalAlignment="Center" Content="Select Port:" Foreground="White" Margin="15,0,0,0"/>
+                <ComboBox x:Name="comboPorts" HorizontalAlignment="Center" VerticalAlignment="Center" Width="120" Height="40"/>
+                <Button x:Name="btn1" Content="Connect" HorizontalAlignment="Right" VerticalAlignment="Center" BorderBrush="Transparent" Width="80" Background="#ffffff" Click="btnConnect" Height="40"/>
+            </Grid>
+
+            <Label x:Name="labelEdit" HorizontalAlignment="Center" VerticalAlignment="Top" Content="Edit Device:" Foreground="White" Margin="0,130,0,0"/>
+
+            <Grid Margin="0,160,0,0" HorizontalAlignment="Center" VerticalAlignment="Top" Width="250" >
+                <Button x:Name="l" Content="Long" HorizontalAlignment="Center" VerticalAlignment="Top" Width="80" Height="50" Click="setButton"/>
+                <Button x:Name="c" Content="Click" HorizontalAlignment="Center" VerticalAlignment="Top" Width="80" Height="50" Margin="0,60,0,0" Click="setButton"/>
+                <Button x:Name="d" Content="Double" HorizontalAlignment="Center" VerticalAlignment="Top" Width="80" Height="50" Margin="0,120,0,0" Click="setButton"/>
+                <Button x:Name="p" Content="+" HorizontalAlignment="Right" VerticalAlignment="Top" Width="80" Height="50" Margin="0,60,0,0" Click="setButton"/>
+                <Button x:Name="m" Content="-" HorizontalAlignment="Left" VerticalAlignment="Top" Width="80" Height="50" Margin="0,60,0,0" Click="setButton"/>
+            </Grid>
+        </Grid>
+        <Grid HorizontalAlignment="Right" VerticalAlignment="Center" Width="250">
+            <Grid Margin="0,0,0,0" Width="150" VerticalAlignment="Top">
+                <Label HorizontalAlignment="Left" VerticalAlignment="Top" Content="Button to modify:" Foreground="White" />
+                <Label x:Name="labelSelected" HorizontalAlignment="Left" VerticalAlignment="Top" Foreground="White" Margin="100,0,0,0"/>
+            </Grid>
+
+            <ComboBox x:Name="doubleCombo" HorizontalAlignment="Center" VerticalAlignment="Top" Width="120" Height="40" Margin="0,40,0,0"/>
+
+            <Grid Margin="0,100,0,0" Width="150" VerticalAlignment="Top">
+                <Label HorizontalAlignment="Left" VerticalAlignment="Top" Content="Foreground Window:" Foreground="White" />
+                <Label x:Name="labelForeground" HorizontalAlignment="Left" VerticalAlignment="Top" Foreground="White" Margin="100,0,0,0"/>
+            </Grid>
+
+            <ComboBox x:Name="foregroundCombo" HorizontalAlignment="Center" VerticalAlignment="Top" Width="120" Height="40" Margin="0,140,0,0"/>
+
+
+        </Grid>
     </Grid>
 </Window>
